[project]
name = "ai-due-diligence-agent"
version = "0.1.0"
description = "AI Due Diligence Analyst - Multi-Agent Pipeline for Startup Investment Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.21.0",
    "google-auth>=2.45.0",
    "google-cloud-storage>=3.4.1",
    "matplotlib>=3.10.8",
    "uagents>=0.23.0",
    "uagents-core>=0.4.0",
    "python-dotenv>=1.1.0",
]
