[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appliance-auto-whisperer"
version = "0.2.0"
description = "Multi-agent appliance diagnosis, parts sourcing, and repair guidance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "uagents>=0.14.0",
  "uagents-core>=0.4.3",
  "google-api-python-client>=2.150.0",
  "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
