[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-fetch"
version = "0.1.0"
description = "Fetch Orchestrator Agent integration with OpenClaw – secure local execution via Agentverse"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "uagents==0.23.6",
    "uagents-core==0.4.1",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.ruff.lint.per-file-ignores]
"scripts/local_test.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["shared*", "orchestrator*", "connector*"]
